<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_view"
    android:fillViewport="true"
    style="@style/fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding">

        <!-- PART: General settings -->
        <TextView
            android:text="@string/prefs_part_general"
            style="@style/subtitle_text" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0"
            android:paddingStart="@dimen/padding"
            android:paddingEnd="@dimen/padding">

            <!-- Select language -->
            <TableRow android:layout_marginTop="@dimen/padding">

                <TextView
                    android:text="@string/prefs_language"
                    style="@style/table_text" />

                <Spinner
                    android:id="@+id/language_edit"
                    style="@style/table_spinner" />
            </TableRow>

            <TextView
                style="@style/info_text"
                android:text="@string/prefs_language_info" />

            <!-- Enter your weight -->
            <TableRow android:layout_marginTop="@dimen/padding">

                <TextView
                    style="@style/table_text"
                    android:text="@string/prefs_weight" />

                <EditText
                    style="@style/table_edit"
                    android:id="@+id/weight_edit"
                    android:text=""
                    android:inputType="numberDecimal"
                    android:maxLength="6" />
            </TableRow>

            <TextView
                style="@style/info_text"
                android:text="@string/prefs_weight_info" />

            <!-- Enter your gender -->
            <TableRow android:layout_marginTop="@dimen/padding">

                <TextView
                    android:text="@string/prefs_gender"
                    style="@style/table_text" />

                <Spinner
                    android:id="@+id/gender_edit"
                    style="@style/table_spinner" />
            </TableRow>

            <TextView
                style="@style/info_text"
                android:text="@string/prefs_gender_info" />

            <!-- Enter alcohol limit for driving -->
            <TableRow>

                <TextView
                    android:text="@string/prefs_driving_alcohol_limit"
                    style="@style/table_text" />

                <EditText
                    android:id="@+id/driving_limit_edit"
                    android:text=""
                    style="@style/table_edit"
                    android:inputType="numberDecimal"
                    android:maxLength="6" />
            </TableRow>

            <TextView
                style="@style/info_text"
                android:text="@string/prefs_driving_alcohol_limit_info" />

            <!-- Starting day for week -->
            <TableRow android:layout_marginTop="@dimen/padding">

                <TextView
                    android:text="@string/prefs_week_start"
                    style="@style/table_text" />

                <Spinner
                    android:id="@+id/week_start_edit"
                    style="@style/table_spinner" />
            </TableRow>

            <TextView
                style="@style/info_text"
                android:text="@string/prefs_week_start_info" />

            <!-- Time when day changes -->
            <TableRow>

                <TextView
                    android:text="@string/prefs_day_change_time"
                    style="@style/table_text" />

                <EditText
                    style="@style/table_edit"
                    android:id="@+id/day_change_edit"
                    android:clickable="true"
                    android:focusable="false" />

            </TableRow>

            <TextView
                style="@style/info_text"
                android:text="@string/prefs_day_change_time_info" />

        </TableLayout>


        <!-- PART: Standard drink alcohol weight -->
        <TextView
            android:text="@string/prefs_part_alc_weight"
            style="@style/subtitle_text" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0"
            android:paddingStart="@dimen/padding"
            android:paddingEnd="@dimen/padding">

            <!-- Standard drink based on country -->
            <TextView
                style="@style/table_text"
                android:text="@string/prefs_standard_drink"
                android:layout_marginTop="@dimen/padding" />

            <Spinner
                style="@style/table_spinner"
                android:id="@+id/standard_drink" />

            <TextView
                style="@style/info_text"
                android:text="@string/prefs_standard_drink_info" />

        </TableLayout>

        <!-- PART: Data backup -->
        <TextView
            android:text="@string/prefs_part_backup_data"
            style="@style/subtitle_text" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0"
            android:paddingStart="@dimen/padding"
            android:paddingEnd="@dimen/padding">

            <!-- Data backup -->
            <TextView
                style="@style/info_text"
                android:text="@string/prefs_backup_info"
                android:layout_marginTop="@dimen/padding" />

            <LinearLayout
                style="@style/horizontal_fill_vwrap"
                android:weightSum="2">

                <Button
                    style="@style/button_wrap"
                    android:id="@+id/backup_data"
                    android:text="@string/prefs_backup_data"
                    android:layout_weight="1"
                    android:onClick="backupData" />

                <Button
                    style="@style/button_wrap"
                    android:id="@+id/restore_data"
                    android:text="@string/prefs_restore_data"
                    android:layout_weight="1"
                    android:onClick="restoreData" />
            </LinearLayout>

        </TableLayout>

    </LinearLayout>

</ScrollView>
