<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/main_view" style="@style/fill_parent"
  android:fillViewport="true">

  <LinearLayout style="@style/vertical_wrap_hfill">

    <!-- Logo and version texts -->
    <LinearLayout style="@style/horizontal_wrap"
      android:layout_gravity="center">

      <!-- Logo -->
      <ImageView android:src="@drawable/launcher" style="@style/wrap_content" 
        android:layout_gravity="top" />

      <LinearLayout style="@style/vertical_wrap"
        android:layout_gravity="center" android:layout_marginLeft="15dp">
        <!-- Version texts -->
        <TextView android:text="@string/app_name" style="@style/simple_text" />
        <TextView android:id="@+id/version_short" android:text="@string/version_free"
          style="@style/info_text" />
        <TextView android:id="@+id/version_number"
          android:text="" style="@style/info_text" />
      </LinearLayout>

    </LinearLayout>

    <!-- Copyright texts -->
    <TextView android:text="@string/about_copyright" style="@style/simple_text"
      android:layout_marginTop="10dp" />

    <!-- Information about the version -->
    <TextView android:id="@+id/version_info" android:text="@string/about_version_free"
      style="@style/simple_text" android:layout_marginTop="10dp" />

    <!-- Purchase license button -->
    <LinearLayout style="@style/horizontal_fill_vwrap"
      android:weightSum="10">
      <Button android:id="@+id/check_license" style="@style/button_main"
        android:text="@string/about_check_license" android:onClick="checkLicense"
        android:layout_weight="5" />
      <Button android:id="@+id/buy_license" style="@style/button_main"
        android:text="@string/about_buy_license" android:onClick="purchaseLicense"
        android:layout_weight="5" />
    </LinearLayout>
    
    <!-- Error message that is shown if license service is unavailable -->
    <TextView android:id="@+id/billing_service_error"
      android:text="@string/billing_service_unavailable" style="@style/info_text"
      android:visibility="gone" android:textColor="@color/error_text_color"
      android:layout_marginTop="10dp" android:layout_marginBottom="10dp" />

    <!-- General info -->
    <TextView android:text="@string/about_stuff" style="@style/simple_text"
      android:layout_marginTop="10dp" />

    <!-- Source code info -->
    <TextView android:text="@string/about_sourcecode" style="@style/simple_text"
      android:layout_marginTop="10dp" />

    <!-- OK button -->
    <Button android:text="@string/about_ok" style="@style/button_wrap"
      android:onClick="onOKPressed" android:layout_gravity="center"
      android:paddingLeft="30dp" android:paddingRight="30dp"
      android:layout_marginTop="10dp" android:layout_marginBottom="15dp" />

  </LinearLayout>

</ScrollView>
  