<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_view"
    android:fillViewport="true"
    style="@style/fill_parent"
    android:scrollbarStyle="insideInset">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:paddingBottom="@dimen/doublePadding">

        <!-- Drink amount stats -->
        <TextView
            android:text="@string/stats_title_drinks"
            style="@style/subtitle_text" />

        <!-- Total drinks: total_drinks -->
        <TableRow>

            <TextView
                android:text="@string/stats_total_drinks"
                android:paddingStart="@dimen/padding"
                style="@style/table_text_tight" />

            <TextView
                android:id="@+id/total_drinks"
                android:paddingEnd="@dimen/padding"
                style="@style/simple_text_right"
                android:text="1520" />
        </TableRow>
        <!-- Total portions: total_portions -->
        <TableRow>

            <TextView
                android:text="@string/stats_total_portions"
                android:paddingStart="@dimen/padding"
                style="@style/table_text_tight" />

            <TextView
                android:id="@+id/total_portions"
                android:paddingEnd="@dimen/padding"
                style="@style/simple_text_right"
                android:text="1893,44" />
        </TableRow>
        <!-- Total portions: total_alcohol -->
        <TableRow>

            <TextView
                android:text="@string/stats_total_alcohol"
                android:paddingStart="@dimen/padding"
                style="@style/table_text_tight" />

            <TextView
                android:id="@+id/total_alcohol"
                android:paddingEnd="@dimen/padding"
                style="@style/simple_text_right"
                android:text="1893,44 l" />
        </TableRow>


        <!-- Date stats -->
        <TextView
            android:text="@string/stats_title_days"
            style="@style/subtitle_text" />

        <!-- First recorded drinking day: first_day -->
        <TextView
            android:text="@string/stats_first_day"
            android:paddingStart="@dimen/padding"
            style="@style/table_text_tight" />

        <TextView
            android:id="@+id/first_day"
            android:paddingEnd="@dimen/padding"
            style="@style/simple_text_right"
            android:text="Saturday 1/1/1970 10:54"
            android:layout_width="fill_parent" />
        <!-- Days since first drink: all_days -->
        <TableRow>

            <TextView
                android:paddingStart="@dimen/padding"
                android:text="@string/stats_all_days"
                style="@style/table_text_tight" />

            <TextView
                android:id="@+id/all_days"
                android:paddingEnd="@dimen/padding"
                style="@style/simple_text_right"
                android:text="1452" />
        </TableRow>
        <!-- Sober days: sober_days -->
        <TableRow>

            <TextView
                android:paddingStart="@dimen/padding"
                android:text="@string/stats_sober_days"
                style="@style/table_text_tight" />

            <TextView
                android:id="@+id/sober_days"
                android:paddingEnd="@dimen/padding"
                style="@style/simple_text_right"
                android:text="842 (60,42 %)" />
        </TableRow>
        <!-- Drunk days: drunk_days -->
        <TableRow>

            <TextView
                android:text="@string/stats_drunk_days"
                android:paddingStart="@dimen/padding"
                style="@style/table_text_tight" />

            <TextView
                android:id="@+id/drunk_days"
                android:paddingEnd="@dimen/padding"
                style="@style/simple_text_right"
                android:text="530 (35,23 %)" />
        </TableRow>

        <!-- Average portions per week -->
        <TextView
            android:text="@string/stats_title_avg_weekly_portions"
            style="@style/subtitle_text" />
        <!-- Portions per week -->
        <TableRow>

            <TextView
                android:text="@string/stats_avg_portions_all_weeks"
                android:paddingStart="@dimen/padding"
                style="@style/table_text_tight" />

            <TextView
                android:id="@+id/avg_weekly_portions"
                android:paddingEnd="@dimen/padding"
                style="@style/simple_text_right"
                android:text="15.6" />
        </TableRow>

        <!-- Average portions per days -->
        <TextView
            android:text="@string/stats_title_avg_portions"
            style="@style/subtitle_text" />

        <!-- Portions per all days: avg_portions_all_days -->
        <TableRow>

            <TextView
                android:text="@string/stats_avg_portions_all_days"
                android:paddingStart="@dimen/padding"
                style="@style/table_text_tight" />

            <TextView
                android:id="@+id/avg_portions_all_days"
                android:paddingEnd="@dimen/padding"
                style="@style/simple_text_right"
                android:text="0.7" />
        </TableRow>
        <!-- Portions per days when drunk: avg_portions_drunk_days -->
        <TableRow>

            <TextView
                android:text="@string/stats_avg_portions_drunk_days"
                android:paddingStart="@dimen/padding"
                style="@style/table_text_tight" />

            <TextView
                android:id="@+id/avg_portions_drunk_days"
                android:paddingEnd="@dimen/padding"
                style="@style/simple_text_right"
                android:text="3.4" />
        </TableRow>

    </TableLayout>

</ScrollView>
  