<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_view"
    style="@style/fill_parent"
    android:fillViewport="true">

    <LinearLayout style="@style/vertical_wrap_hfill"
        android:padding="@dimen/padding">

        <!-- Logo and version texts -->
        <LinearLayout
            style="@style/horizontal_wrap"
            android:layout_gravity="center">

            <!-- Logo -->
            <ImageView
                android:src="@mipmap/ic_launcher"
                style="@style/wrap_content"
                android:contentDescription="@string/app_name"
                android:layout_gravity="top" />

            <LinearLayout
                style="@style/vertical_wrap"
                android:layout_gravity="center"
                android:layout_marginStart="15dp">
                <!-- Version texts -->
                <TextView
                    android:text="@string/app_name"
                    style="@style/simple_text" />

                <TextView
                    android:id="@+id/version_short"
                    android:text="@string/version_free"
                    style="@style/info_text" />

                <TextView
                    android:id="@+id/version_number"
                    android:text=""
                    style="@style/info_text" />
            </LinearLayout>

        </LinearLayout>

        <!-- Copyright texts -->
        <TextView
            android:text="@string/about_copyright"
            style="@style/simple_text"
            android:layout_marginTop="10dp" />

        <!-- Information about the version -->
        <TextView
            android:id="@+id/version_info"
            android:text="@string/about_version_free"
            style="@style/simple_text"
            android:layout_marginTop="10dp" />

        <!-- General info -->
        <TextView
            android:text="@string/about_stuff"
            style="@style/simple_text"
            android:layout_marginTop="10dp" />

        <!-- Source code info -->
        <TextView
            android:text="@string/about_sourcecode"
            style="@style/simple_text"
            android:layout_marginTop="10dp" />

        <!-- OK button -->
        <Button
            android:text="@string/about_ok"
            style="@style/button_wrap"
            android:onClick="onOKPressed"
            android:layout_gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp" />

    </LinearLayout>

</ScrollView>
