<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_view"
    android:fillViewport="true"
    style="@style/fill_parent">

    <LinearLayout style="@style/vertical_wrap">

        <TextView
            android:text="@string/disclaimer_text"
            style="@style/disclaimer_text"
            android:layout_margin="10dp" />

        <LinearLayout
            style="@style/horizontal_wrap"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">

            <Button
                android:text="@string/disclaimer_ok"
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onOKPressed" />

            <Button
                android:text="@string/disclaimer_what"
                android:id="@+id/what_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onWhatPressed"
                android:layout_marginStart="10dp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
